--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -32,9 +32,11 @@
     <TypeScriptCompile Include="Simulator\CpuMode.ts" />
     <TypeScriptCompile Include="Simulator\CpuState.ts" />
     <TypeScriptCompile Include="Simulator\DataType.ts" />
+    <TypeScriptCompile Include="Simulator\Device.ts" />
     <TypeScriptCompile Include="Simulator\Helper.ts" />
     <TypeScriptCompile Include="Simulator\Memory.ts" />
     <TypeScriptCompile Include="Simulator\Region.ts" />
+    <TypeScriptCompile Include="Simulator\Vm.ts" />
     <TypeScriptCompile Include="test.ts" />
   </ItemGroup>
   <ItemGroup>
