--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -33,7 +33,9 @@
     <TypeScriptCompile Include="Simulator\CpuState.ts" />
     <TypeScriptCompile Include="Simulator\DataType.ts" />
     <TypeScriptCompile Include="Simulator\Device.ts" />
+    <TypeScriptCompile Include="Simulator\Devices\TL16C750.ts" />
     <TypeScriptCompile Include="Simulator\Helper.ts" />
+    <TypeScriptCompile Include="Simulator\IVmService.ts" />
     <TypeScriptCompile Include="Simulator\Memory.ts" />
     <TypeScriptCompile Include="Simulator\Region.ts" />
     <TypeScriptCompile Include="Simulator\Vm.ts" />
