VS project file update

--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -33,6 +33,7 @@
     <TypeScriptCompile Include="Simulator\CpuState.ts" />
     <TypeScriptCompile Include="Simulator\DataType.ts" />
     <TypeScriptCompile Include="Simulator\Device.ts" />
+    <TypeScriptCompile Include="Simulator\Devices\HD44780U.ts" />
     <TypeScriptCompile Include="Simulator\Devices\TL16C750.ts" />
     <TypeScriptCompile Include="Simulator\Helper.ts" />
     <TypeScriptCompile Include="Simulator\IVmService.ts" />
