UART bugfixes and more unit-tests.

--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="phantomjs-license.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Simulator\Condition.ts" />
@@ -54,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Docs\DS1307.pdf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
