--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <Content Include="Docs\DS1307.pdf" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
   </PropertyGroup>
