--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -32,6 +32,7 @@
     <TypeScriptCompile Include="Simulator\CpuState.ts" />
     <TypeScriptCompile Include="Simulator\DataType.ts" />
     <TypeScriptCompile Include="Simulator\Device.ts" />
+    <TypeScriptCompile Include="Simulator\Devices\Timer.ts" />
     <TypeScriptCompile Include="Simulator\Devices\DS1307.ts" />
     <TypeScriptCompile Include="Simulator\Devices\HD44780U.ts" />
     <TypeScriptCompile Include="Simulator\Devices\TL16C750.ts" />
