--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -10,7 +10,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
-    <TypeScriptToolsVersion>1.7</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -44,6 +44,7 @@
     <TypeScriptCompile Include="Simulator\Vm.ts" />
     <TypeScriptCompile Include="Tests\MockService.ts" />
     <TypeScriptCompile Include="Tests\Test.Cpu.ts" />
+    <TypeScriptCompile Include="Tests\Test.Memory.ts" />
     <TypeScriptCompile Include="Tests\Test.Timer.ts" />
     <TypeScriptCompile Include="Tests\Test.HD44780U.ts" />
     <TypeScriptCompile Include="Tests\Test.DS1307.ts" />
