--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -32,6 +32,7 @@
     <TypeScriptCompile Include="Simulator\CpuState.ts" />
     <TypeScriptCompile Include="Simulator\DataType.ts" />
     <TypeScriptCompile Include="Simulator\Device.ts" />
+    <TypeScriptCompile Include="Simulator\Devices\PIC.ts" />
     <TypeScriptCompile Include="Simulator\Devices\Timer.ts" />
     <TypeScriptCompile Include="Simulator\Devices\DS1307.ts" />
     <TypeScriptCompile Include="Simulator\Devices\HD44780U.ts" />
@@ -45,6 +46,7 @@
     <TypeScriptCompile Include="Tests\MockService.ts" />
     <TypeScriptCompile Include="Tests\Test.Cpu.ts" />
     <TypeScriptCompile Include="Tests\Test.Memory.ts" />
+    <TypeScriptCompile Include="Tests\Test.PIC.ts" />
     <TypeScriptCompile Include="Tests\Test.Timer.ts" />
     <TypeScriptCompile Include="Tests\Test.HD44780U.ts" />
     <TypeScriptCompile Include="Tests\Test.DS1307.ts" />
@@ -58,6 +60,7 @@
   <ItemGroup>
     <Content Include="Docs\HD44780.pdf" />
     <Content Include="Docs\TL16C750.pdf" />
+    <Content Include="Tests\index.html" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Docs\DS1307.pdf" />
@@ -68,6 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Docs\Watchdog.pdf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Docs\PIC.pdf" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
@@ -88,13 +94,14 @@
   </ProjectExtensions>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptRemoveComments>True</TypeScriptRemoveComments>
-    <TypeScriptSourceMap>False</TypeScriptSourceMap>
+    <TypeScriptSourceMap>True</TypeScriptSourceMap>
     <PublishDatabases>false</PublishDatabases>
     <TypeScriptTarget>ES5</TypeScriptTarget>
     <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
     <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
     <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
-    <TypeScriptModuleKind>None</TypeScriptModuleKind>
+    <TypeScriptModuleKind>
+    </TypeScriptModuleKind>
     <TypeScriptOutFile>
     </TypeScriptOutFile>
     <TypeScriptOutDir>
