--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -39,16 +39,22 @@
     <TypeScriptCompile Include="Simulator\Devices\HD44780U.ts" />
     <TypeScriptCompile Include="Simulator\Devices\TL16C750.ts" />
     <TypeScriptCompile Include="Simulator\Devices\Watchdog.ts" />
-    <TypeScriptCompile Include="Simulator\Helper.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\Elf32.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\ElfMachine.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\ElfOsAbi.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\ElfSegment.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\ElfSegmentType.ts" />
+    <TypeScriptCompile Include="Simulator\Elf\ElfType.ts" />
+    <TypeScriptCompile Include="Simulator\Util\Helper.ts" />
     <TypeScriptCompile Include="Simulator\IVmService.ts" />
     <TypeScriptCompile Include="Simulator\Memory.ts" />
     <TypeScriptCompile Include="Simulator\Region.ts" />
     <TypeScriptCompile Include="Simulator\Util\BinaryReader.ts" />
-    <TypeScriptCompile Include="Simulator\Util\ElfLoader.ts" />
     <TypeScriptCompile Include="Simulator\Vm.ts" />
     <TypeScriptCompile Include="Tests\MockService.ts" />
     <TypeScriptCompile Include="Tests\Test.BinaryReader.ts" />
     <TypeScriptCompile Include="Tests\Test.Cpu.ts" />
+    <TypeScriptCompile Include="Tests\Test.Elf32.ts" />
     <TypeScriptCompile Include="Tests\Test.GPIO.ts" />
     <TypeScriptCompile Include="Tests\Test.Memory.ts" />
     <TypeScriptCompile Include="Tests\Test.PIC.ts" />
