--- a/web.config
+++ b/web.config
@@ -5,5 +5,9 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
-
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".s" mimeType="text/plain" />
+    </staticContent>
+  </system.webServer>
 </configuration>
