--- a/ARM.JS.csproj
+++ b/ARM.JS.csproj
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="C\devboard.h" />
-    <Content Include="C\integration.c" />
+    <Content Include="C\example.c" />
     <Content Include="Docs\HD44780.pdf" />
     <Content Include="Docs\TL16C750.pdf" />
   </ItemGroup>
@@ -93,12 +93,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="web.config" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
